[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/enemy_slime_levitating/enemy_slime_levitating_eyes_closed.png" type="Texture" id=1]
[ext_resource path="res://entities/enemy/LeftRightEnemy/LeftRightFlyingEnemy.gd" type="Script" id=2]
[ext_resource path="res://Sprites/enemy_slime_levitating/enemy_slime_levitating_eyes_open.png" type="Texture" id=3]
[ext_resource path="res://entities/enemy/healthbar/EnemyHealthBar.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.99999, 9.25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 6.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 4.5 )

[node name="FlyingEnemyLeftRight" type="Node2D" groups=["Enemy"]]
scale = Vector2( 2, 2 )

[node name="LeftRightEnemySlime" type="KinematicBody2D" parent="." groups=["Enemy"]]
collision_layer = 128
collision_mask = 2
script = ExtResource( 2 )

[node name="AnimatedFlyingSlime" type="AnimatedSprite" parent="LeftRightEnemySlime"]
position = Vector2( 0, -5 )
frames = SubResource( 6 )

[node name="BounceDetectorArea" type="Area2D" parent="LeftRightEnemySlime"]
collision_layer = 0
collision_mask = 130

[node name="BounceDetectorShape" type="CollisionShape2D" parent="LeftRightEnemySlime/BounceDetectorArea"]
position = Vector2( -0.250018, -5.00001 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="playerKiller" type="Area2D" parent="LeftRightEnemySlime"]
position = Vector2( 0, 4 )
collision_layer = 0

[node name="PlayerkillerShape" type="CollisionShape2D" parent="LeftRightEnemySlime/playerKiller"]
modulate = Color( 0.545098, 0.0431373, 0.0431373, 1 )
position = Vector2( 0, -9 )
shape = SubResource( 4 )

[node name="playerDetector" type="Area2D" parent="LeftRightEnemySlime"]
position = Vector2( 0, -3.5 )
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftRightEnemySlime/playerDetector"]
position = Vector2( 0, -1.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftRightEnemySlime"]
position = Vector2( 0, -4.5 )
shape = SubResource( 1 )

[node name="EnemyHealthBar" parent="LeftRightEnemySlime" instance=ExtResource( 4 )]
visible = false
margin_top = -15.0
margin_bottom = -15.0
enemy_max_hp = 1

[connection signal="enemy_health_changed" from="LeftRightEnemySlime" to="LeftRightEnemySlime/EnemyHealthBar" method="_on_LeftRightEnemySlime_enemy_health_changed"]
[connection signal="body_entered" from="LeftRightEnemySlime/BounceDetectorArea" to="LeftRightEnemySlime" method="_on_BounceDetectorArea_body_entered"]
[connection signal="body_entered" from="LeftRightEnemySlime/playerKiller" to="LeftRightEnemySlime" method="_on_playerKiller_body_entered"]
[connection signal="body_entered" from="LeftRightEnemySlime/playerDetector" to="LeftRightEnemySlime" method="_on_playerDetector_body_entered"]
